--- a/math/notes/prd-functional-analysis/prd-functional-analysis.tex
+++ b/math/notes/prd-functional-analysis/prd-functional-analysis.tex
@@ -47,6 +47,10 @@
 
 \startbodymatter
 
+	\startpart[title={Convergence}, reference=prt:convergence]
+		\component cmp-convergence
+	\stoppart
+
 	\startpart[title={Operator theory}, reference=prt:operator-theory]
 		\component cmp-operator-theory
 	\stoppart
