--- a/teaching/env-tests.tex
+++ b/teaching/env-tests.tex
@@ -159,6 +159,13 @@
 	after={\blank[small]}]
 
 
+% Highlighting
+\definehighlight [comment] [color=darkgray]
+\definehighlight [good] [color=darkgreen]
+\definehighlight [okay] [color=darkorange]
+\definehighlight [ugly] [color=orangered]
+
+
 %% Mathematical environments
 
 \definereferenceformat [eqref] [left=(, right=)]    % Referencing formulas
