--- a/math/notes/prd-analysis/cmp-infinite-dimensional-analysis.tex
+++ b/math/notes/prd-analysis/cmp-infinite-dimensional-analysis.tex
@@ -3,6 +3,14 @@
 \product  prd-analysis
 
 
+\startremark [title={Po-Han's suggestions for studying infinite-dimensional analysis}]
+	\startitemize [m, joinedup]
+		\item  Prévôt, Röckner - A Concise Course on Stochastic Partial Differential Equations (2007) (A -> B -> C -> 2)
+		\item  Pao-Liu Chow - Stochastic Partial Differential Equations (2E, 2014): Only §6.1 to §6.4.
+	\stopitemize
+\stopremark
+
+
 \startchapter [title={Giuseppe Da Prato}]
 	
 	\startproposition [title={Proposition 1.2 in the book}, reference=prp:1d-Gaussian-measure]
