+ MATH1550: test3  + chromebook-setup

--- a/teaching/MATH1550/prd-MATH1550.tex
+++ b/teaching/MATH1550/prd-MATH1550.tex
@@ -23,8 +23,8 @@
 	% \component quiz3-20200131
 	% \component test1-20200204
 	% \component quiz4-20200221
-	\component test2-20200228
-
+	% \component test2-20200228
+	\component test3-20200313
 \stopbodymatter
 
 
