+ Hilbert spaces; + inn ⟹ norm ⟹ metric ⟹ top

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -179,6 +179,9 @@
 \def \logicimpl[#structure][#satisfaction]#arguments{⊨_{#structure} #arguments \ \bsqr{#satisfaction}}
 \def \nlogicimpl[#structure][#satisfaction]#arguments{⊭_{#structure} #arguments \ \bsqr{#satisfaction}}
 
+% Complex
+\def \conj#arguments{\overline{#arguments}}
+
 % Algebra
 \def \linspan#arguments{\mfunction{span} \delim{\{}{\}}{#arguments}}
 \def \inv#arguments{#arguments^{-1}}
