--- a/math/notes/prd-functional-analysis/prd-functional-analysis.tex
+++ b/math/notes/prd-functional-analysis/prd-functional-analysis.tex
@@ -23,7 +23,7 @@
 
 % Document specific information
 \setvariables [document] [title={Functional analysis}]
-\setvariables [document] [subtitle={Mostly operator theory for now}]
+% \setvariables [document] [subtitle={Mostly operator theory for now}]
 \setvariables [document] [author={Sudip Sinha}]
 \setvariables [document] [date={\date}]
 \setvariables [document] [keyword={mathematics, solutions, notes, functional analysis, operator theory}]
@@ -47,11 +47,15 @@
 
 \startbodymatter
 
-	\startpart[title={Convergence}, reference=prt:convergence]
-		\component cmp-convergence
+	\startpart [title={Preliminaries}, reference=prt:preliminaries]
+		\component cmp-preliminaries
 	\stoppart
 
-	\startpart[title={Operator theory}, reference=prt:operator-theory]
+	\startpart [title={Hilbert spaces}, reference=prt:Hilbert-spaces]
+		\component cmp-Hilbert-spaces
+	\stoppart
+
+	\startpart [title={Operator theory}, reference=prt:operator-theory]
 		\component cmp-operator-theory
 	\stoppart
 
