--- a/math/notes/prd-functional-analysis/cmp-preliminaries.tex
+++ b/math/notes/prd-functional-analysis/cmp-preliminaries.tex
@@ -67,7 +67,9 @@
 					\item  \m{d(x, z) = \norm{x - z} = \norm{(x - y) + (y - z)} ≤ \norm{x - y} + \norm{y - z} = d(x, y) + d(y, z)} using \in[dfn:norm].\in[norm:triangle-inequality].
 				\stopitemize
 
-			\item  \emph{metric ⟹ topology}. Define the basis of the topology as open balls of the form
+			\item  \emph{metric ⟹ topology}. A good description is in this \goto{MSx1409687 answer}[url(https://math.stackexchange.com/a/1409698)].
+
+				Define the basis of the topology as open balls of the form
 				\startformula
 					D_r(x_0) = \bcrl{x ∈ X ∣ d(x, x_0) < r}, \qquad x_0 ∈ X, r > 0 .
 				\stopformula
