--- a/math/bibliographies/stochastics.bib
+++ b/math/bibliographies/stochastics.bib
@@ -2,6 +2,17 @@
 % Books %
 %%%%%%%%%
 
+@book{Steele2001,
+	author = {Steele, J. Michael},
+	title = {Stochastic Calculus and Financial Applications},
+	year = 2001,
+	edition = 1,
+	series = {Stochastic Modelling and Applied Probability},
+	publisher = {Springer-Verlag},
+	location = {New York},
+	isbn = {978-1-4684-9305-4},
+	doi = {10.1007/978-1-4684-9305-4}}
+
 @book{Kuo2006,
 	author = {Kuo, Hui-Hsiung},
 	title = {Introduction to Stochastic Integration},
